/**
 * Copyright 2024 ZonaRosa Platform
 * SPDX-License-Identifier: MIT-3.0-only
 */
syntax = "proto3";

package io.zonarosa.chat.auth;

option java_package = "io.zonarosa.server.auth";
option java_multiple_files = true;

message DisconnectionRequest {
  bytes account_identifier = 1;
  repeated uint32 device_ids = 2;
}
